wte_class_interface.h

/*************************************************************************************************
 * main class: taxi simulator among discrete nodes with travel times loaded from external source *
 *************************************************************************************************/
	void* wte_new();
	void wte_free(void* p);
	
	int wte_load_index(void* p, unsigned int matrix_size, const char* fnbase, const char* fnext, const char* fnbase_sorted, const char* fnext_sorted,
		const char* fnbase_paths, const char* fnext_paths, int preread);
	int wte_load_distances(void* p, const char* fn, int preread);
	
	int wte_process_trip(void* p, const void* t, unsigned int tmax1, int allow_moving, int* res1);
		
	int wte_reset(void* p, int clear_drivers);
	int wte_clear(void* p);
		
	/* add one driver at the given node with the given start time */
	int wte_add_driver(void* p, unsigned int node, unsigned int start_time);
	
	/* wte_trips functions */
	void wte_set_seed(void* p, uint64_t seed);
	
	int wte_read_trips(void* p, const char* fn);
	
	/* get a text representation of the last error that occurred (text of exception thrown by C++ code) */
	char* wte_get_error(void* p);
	/* this returns the number of total driver IDs */
	unsigned int wte_get_total_driver_ids(const void* p);
	/* get info about one driver -- returns a reference to a driver_summary struct */
	const void* wte_get_driver_info(void* p, unsigned int d);
	/* Advances the iterator for moving drivers; returns 1 if a valid element is available or 0
	 * if the end has been already reached or if the iterator is invalid. */
	bool wte_moving_drivers_advance(void* p);
	/* Stores the ID and node ID of the current moving driver (pointed to be the internal iterator) in the given locations.
	 * Returns 0 if the iterator is invalid or the end has already been reached; otherwise returns 1. */
	int wte_moving_drivers_current(void* p, unsigned int* driver_id1, unsigned int* node_id);
	
	/* start moving a driver toward a destination using the shortest path;
	 * removes the given driver from either the list of idle or currently
	 * moving drivers; returns 0 if driver is not an idle or
	 * currently moving driver */
	int wte_reposition_driver(void* p, unsigned int id, unsigned int target);
	
	/* remove a driver with the given ID; note: only possible if the driver is not assigned to serve a trip,
	 * i.e. they are idle or cruising */
	int wte_remove_driver(void* p, unsigned int id);
	
	/* get / set the maximum idle time for drivers; after this, they are removed */
	unsigned int wte_get_driver_max_idle(const void* p);
	void wte_set_driver_max_idle(void* p, unsigned int t);
	
	/* remove all drivers who have been idle more than the maximum idle time set by the previous functions */
	int wte_prune_drivers(void* p);
	
	/* set a callback function to be called to select targets to newly free drivers */
	void wte_set_cruising_callback(void* p, unsigned int (*cb)(unsigned int node_id, unsigned int ts));
	
	/* set a callback function to be called to select targets to newly free drivers */
	void wte_set_cruising_callback_with_data(void* p, unsigned int (*cb)(unsigned int node_id, unsigned int ts, void* user_data), void* user_data);