wte.py

		
		self.wte_moving_drivers_advance = self.libwte.wte_moving_drivers_advance
		self.wte_moving_drivers_advance.argtypes = [c_void_p]
		self.wte_moving_drivers_advance.restype = c_int
		
		self.wte_moving_drivers_current = self.libwte.wte_moving_drivers_current
		self.wte_moving_drivers_current.argtypes = [c_void_p, POINTER(c_uint), POINTER(c_uint)]
		self.wte_moving_drivers_current.restype = c_int
		
		
		self.wte_get_driver_max_idle = self.libwte.wte_get_driver_max_idle
		self.wte_get_driver_max_idle.argtypes = [c_void_p]
		self.wte_get_driver_max_idle.restype = c_uint
		self.wte_set_driver_max_idle = self.libwte.wte_set_driver_max_idle
		self.wte_set_driver_max_idle.argtypes = [c_void_p, c_uint]
		
		
		self.wte_prune_drivers = self.libwte.wte_prune_drivers
		self.wte_prune_drivers.argtypes = [c_void_p]
		self.wte_prune_drivers.restype = c_int
		
		self.wte_remove_driver = self.libwte.wte_remove_driver
		self.wte_remove_driver.argtypes = [c_void_p, c_uint]
		self.wte_remove_driver.restype = c_int
		
		
		self.wte_reposition_driver = self.libwte.wte_reposition_driver
		self.wte_reposition_driver.argtypes = [c_void_p, c_uint, c_uint]
		self.wte_reposition_driver.restype = c_int
		
		self.cruising_cb = CFUNCTYPE(c_uint, c_uint, c_uint)
		self.wte_set_cruising_callback = self.libwte.wte_set_cruising_callback
		self.wte_set_cruising_callback.argtypes = [c_void_p, self.cruising_cb]
		
		self.cruising_data_cb = CFUNCTYPE(c_uint, c_uint, c_uint, c_void_p)
		self.wte_set_cruising_callback_with_data = self.libwte.wte_set_cruising_callback_with_data
		self.wte_set_cruising_callback_with_data.argtypes = [c_void_p, self.cruising_data_cb, c_void_p]
		

_libwte = None

def load_wte_lib(path):
	"""Load the C++ shared library needed by this module.
	(only needs to be called if the library is not in the same directory as this module)"""
	this._libwte = libwte1(path)


class wait_time_estimator:
	"""Class interface for C++ taxi simulation code"""
	class driver_info:
		def __init__(self, w):
			self.w = w
		
		def __getitem__(self, key):
			if type(key) is not int:
				raise TypeError("Drivers must be indexed with integers!")
			if key >= _libwte.wte_get_total_driver_ids(self.w):
				raise IndexError("Driver ID too large")
			x = _libwte.wte_get_driver_info(self.w, key)
			if x == 0 or x is None:
				x = c_char_p(_libwte.wte_get_error(self.w)).value
				if x is None:
					raise BaseException("Unknown error!\n")
				else:
					raise BaseException(x.decode('utf-8'))
			return x.contents
		
		def __len__(self):
			return _libwte.wte_get_total_driver_ids(self.w)


	def __init__(self, wte_ptr = None):
		"""
			Create a new instance of this class.
		"""
		if _libwte is None:
		 	load_wte_lib(_libwte_path)
		if (type(wte_ptr) is c_void_p):
			self.w = wte_ptr.value
		elif wte_ptr is None:
			self.w = _libwte.wte_new()
		else:
			raise BaseException("Invalid parameter for pointer: {}!\n".format(type(wte_ptr)))
		if self.w == 0 or self.w is None:
			raise BaseException("Could not allocate memory for wait_time_estimator class!\n")
		self.di = wait_time_estimator.driver_info(self.w)
	
	def __del__(self):
		"""Destructor (needed to free up memory used)"""
		if self.w != 0 and self.w is not None:
			_libwte.wte_free(self.w)
			self.w = 0
	
	def get_error(self):
		"""Return a string description of the last error occured (if any) or None"""
		x = c_char_p(_libwte.wte_get_error(self.w))
		return x.value
	
	def handle_error(self):
		"""Throw an exception with the description of the last error that occured"""
		x = self.get_error()
		if x is None:
			raise BaseException("Unknown error!\n")
		else:
			raise BaseException(x.decode('utf-8'))
	
	# load travel time index -- needed to know which driver can reach which passenger
	def load_index(self, matrix_size, fnbase, fnext, fnbase_sorted = None, fnext_sorted = None,
		fnbase_paths = None, fnext_paths = None, preread = False):
		"""
			Load the (binary) travel time matrix and (optionally) the associated indexes.
			This is necessary before running any simulations.
			
			Parameters:
				matrix_size: size of the matrix (number of nodes in the city), needs to be given as a parameter;
					trips can include node IDs between zero and matrix_size-1 (inclusive)
				fnbase: base filename of travel time matrix binary files
				fnext: extension of travel time matrix binary files (including '.');
					filenames are expected as "fnbase[0-23]fnext"
					(24 files in total, corresponding to each hour in the day)
				fnbase_sorted: base filename of the sorted index binary files (optional, if this is None,
					these will be generated when needed, but this can add a significant additional runtime)
				fnext_sorted: extension of sorted index binary files (including '.')
				fnbase_path: base filename for the shortest path index matrix (only needed if using cruising)
				fnext_sorted: extension of path index matrix (including '.')
				preread: if True, try to ensure that all of the index files are read into memory
		"""
		if fnbase_sorted is not None:
			fnbase_sorted = bytes(fnbase_sorted,'utf-8')
		if fnext_sorted is not None:
			fnext_sorted = bytes(fnext_sorted,'utf-8')
		if fnbase_paths is not None:
			fnbase_paths = bytes(fnbase_paths,'utf-8')
		if fnext_paths is not None:
			fnext_paths = bytes(fnext_paths,'utf-8')
		tmp = 1 if preread else 0
		res = _libwte.wte_load_index(self.w, matrix_size, bytes(fnbase,'utf-8'), bytes(fnext,'utf-8'),
			fnbase_sorted, fnext_sorted, fnbase_paths, fnext_paths, tmp)
		if res == 0:
			self.handle_error()
	
	# load all indices with the default filenames
	def load_index_default_fn(self, matrix_size, dir_name, use_paths = False, preread = False):
		"""
			Load the (binary) travel time matrix and (optionally) the associated indexes.
			This is necessary before running any simulations.
			Use the default filenames (Ho, index and paths) inside the given directory)
			
			Parameters:
				matrix_size: size of the matrix (number of nodes in the city), needs to be given as a parameter;
					trips can include node IDs between zero and matrix_size-1
				dir_name: location of the index files
				use_path: if True, attempt to load the shorted path index as well (only needed if using cruising)
				preread: if True, try to ensure that all of the index files are read into memory
		"""
		return self.load_index(matrix_size, dir_name + '/Ho', '.bin', dir_name + '/index', '.bin',
			dir_name + '/paths' if use_paths else None, '.bin' if use_paths else None, preread)
	
	# load distances between nodes
	def load_distances(self, fn, preread = False):
		"""
			Load the (binary) travel distance matrix from the given file. This is only necessary if travel distances are of interest.
				preread: if True, try to ensure that all of the index files are read into memory
		"""
		tmp = 1 if preread else 0
		res = _libwte.wte_load_distances(self.w, bytes(fn,'utf-8'), tmp)
		if res == 0:
			self.handle_error()
	
	# process one trip given as a parameter
	def process_trip(self, t, tmax1 = 0, allow_moving = True):
		"""
			Process one trip request, given as the t parameter, trying to match it to an available driver.
			
			Parameters:
				t: trip, either the return value of the get_trip() or random_trip() function, or a dict, containing the members
					"id" (64-bit unsigned int), "start_ts", "end_ts", "start_node" and "end_node" (all 32-bit unsigned ints)
					note: all node IDs have to be less than the matrix_size parameter given to load_index()
				tmax1: maximum acceptable waiting time for this passenger (in seconds; zero means unlimited)
				allow_moving: whether currently repositioning drivers are allowed to be assigned to this trip as well
				
			Returns:
				True if a driver was successfully found; in this case, the get_last_res() function can be
					used to get relevant info
				False if no match was found (no drivers available or waiting time would be too large)
				
			Note:
				Trip start time cannot be before than the start time of the last trip that was processed (this will
				result in an exception), so trips have to be supplied in time order. The reset() function can be used
				to start over from the beginning
		"""
		res1 = c_int(0)
		tmp1 = 1 if allow_moving else 0
		if (type(t) is c_void_p) or (type(t) is int) or (type(t) is POINTER(discrete_trip)):
			res = _libwte.wte_process_trip(self.w, t, tmax1, tmp1, byref(res1))
		elif type(t) is discrete_trip:
			res = _libwte.wte_process_trip(self.w, byref(t), tmax1, tmp1, byref(res1))
		else:
			trip = discrete_trip(t['id'], t['start_ts'], t['end_ts'], t['start_node'], t['end_node'])
			res = _libwte.wte_process_trip(self.w, byref(trip), tmax1, tmp1, byref(res1))
		if res == 0:
			self.handle_error()
		if res1.value == 0:
			return False
		return True
		
	# reset simulation to the beginning of the day and erase all drivers
	def reset(self, clear_drivers = False):
		"""
			Reset the state of simulation, including erasing all drivers (have to use add_drivers() again)
		"""
		cd = 1 if clear_drivers else 0
		res = _libwte.wte_reset(self.w, cd)
		if res == 0:
			self.handle_error()
	
	#  reset simulation to the beginning of the day and erase all drivers + clear all trips read previously
	def clear(self):
		"""
			Reset the state, including eraseing all drivers and all trips stored in this instance
		"""
		res = _libwte.wte_clear(self.w)
		if res == 0:
			self.handle_error()
	
	# add one driver at the given node with the given start time
	def add_driver(self,start_time,node = 0):
		"""
			Add one driver to the system, at the given node and start time.
		"""
		res = _libwte.wte_add_driver(self.w,node,start_time)
		if res == 0:
			self.handle_error()
	
	def get_last_res(self):
		 tmp = _libwte.wte_get_last_res(self.w)
		 return tmp.contents
	
	def set_seed(self,seed):
		"""
			Set seed for the random number generator used.
		"""
		_libwte.wte_set_seed(self.w,seed)
	
	# read a list of trips to use
	def read_trips(self,filename):
		"""
			Read a list of taxi trips to use as input (demand) for the simulation.
		"""
		res = _libwte.wte_read_trips(self.w,bytes(filename,'utf-8'))
		if res == 0:
			self.handle_error()
			
	# read a list of trips to use
	def read_trips_csv(self,filename,compress = None, tmin = None, tmax = None, tlimit_in_day = False,
			length_min = None, length_max = None, dist_min = None, dist_max = None, speed_min = None, speed_max = None,
			clear_trips = False, chicago_format = False, node_filter_fn = None):
		"""
			Read a list of taxi trips to use as input (demand) for the simulation.
			Use the csv format, which has the following differences from the previous one:
			  (1) order of columns is changes;
			  (2) instead of trip ID, we have driver ID, this is replaced
			  (3) timestamps are real ones, we replace them to limit to one day
